--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pytz = "^2021.1"
 pytest = "^5.2"
 pre-commit = "^2.10.1"
 
+[tool.pycln]
+all = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
