--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
 [tool.poetry]
 name = "payfast-client"
-version = "0.1.0"
+version = "0.1.1"
 description = "Python client for interacting with the Payfast API"
 authors = ["Fergus Strangways-Dixon <fergusdixon101@gmail.com>"]
 include = ["payfast_client/py.typed"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/fergusdixon/payfast-python-client"
+keywords = ["payfast"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -13,9 +17,6 @@ pytz = "^2021.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pre-commit = "^2.10.1"
-
-[tool.pycln]
-all = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
