--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
       uses: abatilo/actions-poetry@v2.1.0
       with:
         poetry-version: 1.1.5
+    - name: Activate venv
+      run: |
+        poetry shell
     - name: Install dependencies
       run: |
         poetry install
