--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytz = "^2021.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pre-commit = "^2.10.1"
+freezegun = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
