--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ keywords = ["payfast"]
 python = "^3.7"
 requests-futures = "^1.0.0"
 pytz = "^2021.1"
+pytest-cov = "^2.11.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
